fdo#57696: Missing adaption of OSDBCDriverManager to XDriverManager2

Change-Id: Icce6ab9d6d815e9aff4980fadab71a4197593e0e